# wasmtime-coremark-test

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
