[package]
name = "dynamic_wasm_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime-wasi = "14.0.0"
wasmtime = "14.0.0"
anyhow = "1.0.75"
wasi = "0.11.0"
wasmparser = "0.112.0"
log = "0.4"
clap = {version = "4.4.18", features = ["derive"]}